--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
     <section class="ids-container">
         <div class="info-container">
             <h4>מספר אישי</h4>
-            <h3 contenteditable>8399782</h3>
-        </div>
-        <div class="info-container">
-            <h4>מספר תעודה</h4>
-            <h3 contenteditable>8399782</h3>
+            <h3 contenteditable>8358584</h3>
         </div>
         <div class="info-container">
             <h4>מספר ת"ז</h4>
-            <h3 contenteditable>8399782</h3>
+            <h3 contenteditable>209455179</h3>
+        </div>
+        <div class="info-container">
+            <h4>מספר תעודה</h4>
+            <h3 contenteditable>81101984</h3>
         </div>
         <div class="info-container">
             <h4>תאריך תחילת תוקף</h4>
-            <h3 contenteditable>8399782</h3>
+            <h3 contenteditable>11.05.2021</h3>
         </div>
     </section>
     <section class="icon-sentence"><img src="./information.png" alt=""> זכאי לנסיעה בלבוש אזרחי</section>
